demoApp/base_manifests/demo_ingress.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Refer to the kubernetes documentation for more information about the API
# https://kubernetes.io/docs/reference/

# This is an ingress to expose the demo-svc service publicly
# the source of this yaml is inspired from this tutorial
# https://cloud.google.com/kubernetes-engine/docs/how-to/load-balance-ingress

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-ing
spec:
  backend:
    serviceName: demo-svc
    servicePort: 60000
